--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/admin.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/admin.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
-
 <body>
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout"/>
@@ -10,38 +9,34 @@
 <br>
 <br>
 <div><input type="button" value="Add user" onclick="window.location.href = '/admin/register'"/>
-<input type="button" value="Your Profile" onclick="window.location.href = '/user'"/>
+    <input type="button" value="Your Profile" onclick="window.location.href = '/user'"/>
 </div>
-
 <br>
 <br>
-<table border="1"  cellspacing="0" cellpadding="3">
+<table border="1" cellspacing="0" cellpadding="3">
     <tr>
         <th>Username</th>
         <th>FirstName</th>
         <th>Secondname</th>
-        <th>Age</th>
         <th>Email</th>
         <th>Role</th>
         <th>Ection</th>
-
     </tr>
-    <tr   th:each="user : ${users}">
+    <tr th:each="user : ${users}">
         <td th:text="${user.getUsername()}">UserName</td>
-         <td th:text="${user.getFirstname()}">First Name</td>
+        <td th:text="${user.getFirstname()}">First Name</td>
         <td th:text="${user.getSecondName()}">Second Name</td>
-        <td th:text="${user.getAge()}">Age</td>
         <td th:text="${user.getEmail()}">Email</td>
         <td th:text="${user.getRoles()}">Role</td>
-        <td> <a th:href="@{/admin/{id}/edit(id=${user.getId()})}">
-        <button type="button">Edit user </button></a>
-        <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
-        <input type="submit" value = "Delete user"/>
-        </form>
+        <td><a th:href="@{/admin/{id}/edit(id=${user.getId()})}">
+            <button type="button">Edit user</button>
+        </a>
+            <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
+                <input type="submit" value="Delete user"/>
+            </form>
         </td>
     </tr>
-        </table>
-
+</table>
 </form>
 </body>
 </html>
