--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/index.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Title</title>
 </head>
 <body>
-
-
-        <form sec:authorize="isAnonymous()" ><a class="nav-link" href="/login">Login</a></form>
-        <li sec:authorize="isAuthenticated()">Welcome, <span sec:authentication="name"></span></li>
-        <li sec:authorize="isAuthenticated()"><a class="nav-link" href="/user">Your Profile</a></li>
-        <form sec:authorize="isAuthenticated()" th:action="@{/logout}" th:method="POST"><input type="submit" value="Logout"/></form>
-    </menu>
+<form sec:authorize="isAnonymous()"><a class="nav-link" href="/login">Login</a></form>
+<li sec:authorize="isAuthenticated()">Welcome, <span sec:authentication="name"></span></li>
+<li sec:authorize="isAuthenticated()"><a class="nav-link" href="/user">Your Profile</a></li>
+<form sec:authorize="isAuthenticated()" th:action="@{/logout}" th:method="POST"><input type="submit" value="Logout"/>
+</form>
+</menu>
 </div>
 </body>
 </html>
